--- a/schedule_ui/package.json
+++ b/schedule_ui/package.json
@@ -13,9 +13,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "precise-commits": "precise-commits",
-    "precommit": "npm run precise-commits"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,5 +36,10 @@
     "husky": "^3.0.0",
     "prettier": "1.18.2",
     "pretty-quick": "^1.11.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
