--- a/schedule_ui/package.json
+++ b/schedule_ui/package.json
@@ -39,7 +39,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "git --version"
+      "pre-commit": "pretty-quick --staged"
     }
   }
 }
