--- a/schedule_ui/package.json
+++ b/schedule_ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lodash": "^4.17.13",
     "node-sass": "^4.12.0",
     "precise-commits": "^1.0.2",
     "react": "^16.8.6",
