--- a/schedule_ui/package.json
+++ b/schedule_ui/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "date-fns": "^2.0.0-alpha.37",
+    "bootstrap": "^4.3.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "lodash": "^4.17.13",
     "node-sass": "^4.12.0",
     "precise-commits": "^1.0.2",
     "react": "^16.8.6",
+    "react-datepicker": "^2.8.0",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "react-test-renderer": "^16.8.6"
+    "react-test-renderer": "^16.8.6",
+    "reactstrap": "^8.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
