--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'org.springframework.boot' version '2.1.6.RELEASE'
     id 'java'
+    id 'idea'
     //id 'nebula.lint' version '9.3.2' //контроль неиспользуемых зпависимостей
 }
 
@@ -46,18 +47,26 @@ if (hasProperty('profile')) {
     }
 }
 
+test {
+    useJUnitPlatform()
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.h2database:h2'
     implementation 'org.modelmapper:modelmapper:2.3.5'
+    implementation 'org.apache.commons:commons-text:1.7' //?
     runtimeOnly project(':schedule_ui')
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        //exclude group: 'junit', module: 'junit'
+    }
+    testImplementation group: 'org.jsmart', name: 'zerocode-tdd', version: '1.3.9'
     //support openApi codegen annotation
     compileOnly 'io.swagger:swagger-annotations:1.5.22'
     compileOnly 'org.openapitools:jackson-databind-nullable:0.1.0'
