--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,8 +1,9 @@
 spring:
-#  profiles.include: h2Server
   jackson.default-property-inclusion: non_null
   datasource:
-    url: jdbc:h2:file:~/ScheduleDB
+#    url: jdbc:h2:file:~/ScheduleDB
+    url: jdbc:h2:file:./backend/src/main/resources/db/init/ScheduleDB
+    
     driverClassName: org.h2.Driver
     username: sa
     password: password
@@ -10,7 +11,7 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate.ddl-auto: update
     
-  application.name: erip
+  application.name: DepSchedule
   
 server.port: 9006
   
@@ -20,8 +21,27 @@ logging.level:
   org.hibernate.type.descriptor.sql.BasicBinder: TRACE
   
 ---
+spring:
+  profiles: default
+  profiles.include: h2Server
+---
+server.port: 8080
+spring:
+  profiles: test
+  datasource:
+    url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+    username: sa
+    password:
+  jpa:
+    hibernate.ddl-auto: create-drop
+    
+#  profiles.include: h2Server
+#  datasource:
+#    url: jdbc:h2:file:./src/test/resources/db/init/ScheduleDB_test
+    
+---
 spring.profiles: develop
 server.port: 8080
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/ScheduleDB
+    url: jdbc:h2:tcp://localhost/./backend/src/main/resources/db/init/ScheduleDB
