--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   jackson.default-property-inclusion: non_null
   datasource:
 #    url: jdbc:h2:file:~/ScheduleDB
-    url: jdbc:h2:file:./backend/src/main/resources/db/init/ScheduleDB
+    url: jdbc:h2:file:${project.basedir}/backend/src/main/resources/db/init/ScheduleDB
     
     driverClassName: org.h2.Driver
     username: sa
@@ -44,4 +44,4 @@ spring.profiles: develop
 server.port: 8080
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/./backend/src/main/resources/db/init/ScheduleDB
+    url: jdbc:h2:tcp://localhost/${project.basedir}/backend/src/main/resources/db/init/ScheduleDB
