--- a/schedule_ui/package.json
+++ b/schedule_ui/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "date-fns": "^2.0.0-alpha.37",
     "bootstrap": "^4.3.1",
+    "date-fns": "^2.0.0-alpha.37",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "lodash": "^4.17.13",
@@ -15,6 +15,7 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "react-test-renderer": "^16.8.6",
+    "reactjs-popup": "^1.4.1",
     "reactstrap": "^8.0.1"
   },
   "scripts": {
