--- a/backend/openapi_codegen/build.gradle
+++ b/backend/openapi_codegen/build.gradle
@@ -1,13 +1,19 @@
 plugins {
-    id "org.openapi.generator" version "4.0.3"
+    //Не обновлять версию 'org.openapi.generator' пока проблема с @RequestParam не будет решена
+    //https://github.com/OpenAPITools/openapi-generator/issues/3248
+    id "org.openapi.generator" version "4.0.1"
 }
 /**
  * https://github.com/OpenAPITools/openapi-generator/tree/master/modules/openapi-generator-gradle-plugin
  */
 task generateCode(type: org.openapitools.generator.gradle.plugin.tasks.GenerateTask) {
+    //    def rootDirToGenerate = "$projectDir/generated-sources".toString()
+    def rootDirToGenerate = "$projectDir/../".toString()
+
     generatorName = "spring"
     inputSpec = "$projectDir/../../api/depSchedule.yml".toString()
-    outputDir = "$projectDir/generated-sources".toString()
+    outputDir = rootDirToGenerate
+    print("outputDir=" + outputDir.toString())
     skipOverwrite = false
     invokerPackage = "com.varb.schedule.buisness"
     apiPackage = "com.varb.schedule.buisness.logic.controllers.api"
@@ -21,15 +27,19 @@ task generateCode(type: org.openapitools.generator.gradle.plugin.tasks.GenerateT
     configOptions = [
             dateLibrary             : "java8",
             interfaceOnly           : true,
-            ensureUniqueParams : true,
+            ensureUniqueParams      : true,
             sortParamsByRequiredFlag: true,
-            returnSuccessCode       : true
+            returnSuccessCode       : true,
+            useOptional             : true
     ]
 
+    print(outputDir.toString())
+
     doLast { // delete unnecessary files
-        delete "$projectDir/generated-sources/pom.xml"
-        delete "$projectDir/generated-sources/.openapi-generator-ignore"
-        delete "$projectDir/generated-sources/.openapi-generator"
+        delete "$rootDirToGenerate/pom.xml"
+        delete "$rootDirToGenerate/.openapi-generator-ignore"
+        delete "$rootDirToGenerate/.openapi-generator"
+        delete "$rootDirToGenerate/README.md"
     }
 }
 
