--- a/schedule_ui/package.json
+++ b/schedule_ui/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.12.0",
     "precise-commits": "^1.0.2",
     "react": "^16.8.6",
+    "react-color": "^2.17.3",
     "react-datepicker": "^2.8.0",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
