new version api

--- a/api/depSchedule.yml
+++ b/api/depSchedule.yml
@@ -332,6 +332,13 @@ paths:
       summary: Получить время выполнения событий для подразделения
       tags:
         - eventDuration
+      parameters:
+        - name: unitId
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int64
       responses:
         200:
           description: successful operation
