--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 spring:
-  jackson.default-property-inclusion: non_null
+  jackson:
+      default-property-inclusion: NON_EMPTY
   datasource:
     #    url: jdbc:h2:file:~/ScheduleDB
     url: jdbc:h2:file:${project.basedir}/backend/src/main/resources/db/init/ScheduleDB
