--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -61,12 +61,15 @@ dependencies {
     implementation 'com.h2database:h2'
     implementation 'org.modelmapper:modelmapper:2.3.5'
     implementation 'org.apache.commons:commons-text:1.7' //?
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    
     runtimeOnly project(':schedule_ui')
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
 
+    testImplementation('org.springframework.security:spring-security-test')
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         //exclude group: 'junit', module: 'junit'
     }
