--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 spring:
   #  jackson.default-property-inclusion: non_null
   datasource:
+    name: ds-h2
     #    url: jdbc:h2:file:~/ScheduleDB
-    url: jdbc:h2:file:${project.basedir}/backend/src/main/resources/db/init/ScheduleDB
-
-    driverClassName: org.h2.Driver
+    jdbc-url: jdbc:h2:file:${project.basedir}/backend/src/main/resources/db/init/ScheduleDB
     username: sa
     password: password
+    driverClassName: org.h2.Driver
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate.ddl-auto: validate
@@ -29,7 +29,7 @@ server.port: 8080
 spring:
   profiles: test
   datasource:
-    url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+    jdbc-url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
     username: sa
     password:
   jpa:
@@ -44,5 +44,5 @@ spring.profiles: develop
 server.port: 8080
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/${project.basedir}/backend/src/main/resources/db/init/ScheduleDB
+    jdbc-url: jdbc:h2:tcp://localhost/${project.basedir}/backend/src/main/resources/db/init/ScheduleDB
 #    url: jdbc:h2:tcp://localhost/${user.dir}/backend/src/main/resources/db/init/ScheduleDB
